--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,7 +25,7 @@
     </p>
     <h2>Do you need help?</h2>
     <p>
-        TESTING City of Sanctuary Sheffield is an independent charity working in solidarity with people seeking sanctuary in Sheffield.  In 2007, with the support of the City Council, Sheffield became the UK's first City of Sanctuary for asylum-seekers and refugees - a city that takes pride in the welcome it offers to people in need of safety.
+        City of Sanctuary Sheffield is an independent charity working in solidarity with people seeking sanctuary in Sheffield.  In 2007, with the support of the City Council, Sheffield became the UK's first City of Sanctuary for asylum-seekers and refugees - a city that takes pride in the welcome it offers to people in need of safety.
     </p>
     <p>
         You can find out more about what the Sanctuary does <a href="https://sheffield.cityofsanctuary.org/our-projects/current-opening-times-2022/">here</a>.
