--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,6 +43,12 @@
               </li>
             </ul>
         </div>
+        <img class="logo-top" src={{ url_for('static', filename='img/spring_logos_all.png') }}
+             title="With thanks to the VAS new beginnings project, City of Sanctuary Sheffield, SAVTE, Citizens Advice Sheffield, Sheffield City Council, and Solace."
+             alt="A series of logos for the VAS new beginnings project, City of Sanctuary Sheffield, SAVTE, Citizens Advice Sheffield, Sheffield City Council, and Solace." />
+        <img class="logo-top" src={{ url_for('static', filename='img/EU_stars.png') }}
+             title="This project is part funded by the EU Asylum, Migration and Integration Fund. Making management of migration flows more efficient across the European Union."
+             alt="The EU stars flag: This project is part funded by the EU Asylum, Migration and Integration Fund. Making management of migration flows more efficient across the European Union." />
     </nav>
     <div class="container">
       <div id="input">
