Added org logos to the about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -31,6 +31,16 @@
     <p>
         The website's underlying dataset, which we maintain manually, can be downloaded in full from <a href={{ url_for("static", filename="foodbanks.csv") }}>here</a>.
     </p>
+    <h2>Organisations</h2>
+    <p>With thanks to the VAS new beginnings project, City of Sanctuary Sheffield, SAVTE, Citizens Advice Sheffield, Sheffield City Council, and Solace. This project is part funded by the EU Asylum, Migration and Integration Fund. Making management of migration flows more efficient across the European Union.</p>
+    <img src={{ url_for('static', filename='img/spring_logos_all.png') }}
+         style="height: 65px;"
+         title="With thanks to the VAS new beginnings project, City of Sanctuary Sheffield, SAVTE, Citizens Advice Sheffield, Sheffield City Council, and Solace."
+         alt="A series of logos for the VAS new beginnings project, City of Sanctuary Sheffield, SAVTE, Citizens Advice Sheffield, Sheffield City Council, and Solace." />
+    <img src={{ url_for('static', filename='img/EU_stars.png') }}
+         style="height: 65px;"
+         title="This project is part funded by the EU Asylum, Migration and Integration Fund. Making management of migration flows more efficient across the European Union."
+         alt="The EU stars flag: This project is part funded by the EU Asylum, Migration and Integration Fund. Making management of migration flows more efficient across the European Union." />
 </div>
 
 {% endblock %}
