restyled columns, handles weird whitespace better now

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -106,3 +106,8 @@ footer p, address {
     margin: 0 0;
     padding: 0 0;
 }
+
+tr td:last-child {
+    max-width: 200px;
+    word-wrap: break-word;
+}
